@@ -96,7 +96,6 @@ Multiply2_sym_p8p (dReal * A, dReal * B, dReal * C, int p, int Askip)
 		A += Askip + 1;
 		C += 8;
 	}
-
 }
 
 static void
@@ -128,7 +127,6 @@ MultiplyAdd2_sym_p8p (dReal * A, dReal * B, dReal * C, int p, int Askip)
 		A += Askip + 1;
 		C += 8;
 	}
-
 }
 
 
@@ -354,7 +352,7 @@ dInternalStepFast (dxWorld * world, dxBody * body[2], dReal * GI[2], dReal * Gin
 	dTimerNow ("compute A");
 #   endif
 	dReal JinvM[2 * 6 * 8];
-	dSetZero (JinvM, 2 * m * 8);
+	//dSetZero (JinvM, 2 * m * 8);
 
 	dReal *Jsrc = Jinfo.J1l;
 	dReal *Jdst = JinvM;
@@ -387,7 +385,7 @@ dInternalStepFast (dxWorld * world, dxBody * body[2], dReal * GI[2], dReal * Gin
 	// now compute A = JinvM * J'.
 	int mskip = dPAD (m);
 	dReal A[6 * 8];
-	dSetZero (A, 6 * 8);
+	//dSetZero (A, 6 * 8);
 
 	if (body[0])
 		Multiply2_sym_p8p (A, JinvM, Jinfo.J1l, m, mskip);
@@ -403,7 +401,7 @@ dInternalStepFast (dxWorld * world, dxBody * body[2], dReal * GI[2], dReal * Gin
 	dTimerNow ("compute rhs");
 #   endif
 	dReal tmp1[16];
-	dSetZero (tmp1, 16);
+	//dSetZero (tmp1, 16);
 	// put v/h + invM*fe into tmp1
 	for (i = 0; i < 2; i++)
 	{
@@ -417,7 +415,7 @@ dInternalStepFast (dxWorld * world, dxBody * body[2], dReal * GI[2], dReal * Gin
 	}
 	// put J*tmp1 into rhs
 	dReal rhs[6];
-	dSetZero (rhs, 6);
+	//dSetZero (rhs, 6);
 
 	if (body[0])
 		Multiply0_p81 (rhs, Jinfo.J1l, tmp1, m);
@@ -584,7 +582,7 @@ dInternalStepFast (dxWorld * world, dxBody * body[2], dReal * GI[2], dReal * Gin
 	// compute cforce = J'*lambda
 	dJointFeedback *fb = joint->feedback;
 	dReal cforce[16];
-	dSetZero (cforce, 16);
+	//dSetZero (cforce, 16);
 
 	if (fb)
 	{
@@ -693,15 +691,25 @@ dInternalStepIslandFast (dxWorld * world, dxBody * const *bodies, int nb, dxJoin
 		ofs[i] = m;
 		m += info[i].m;
 	}
+	dReal *c = NULL;
+	dReal *cfm = NULL;
+	dReal *lo = NULL;
+	dReal *hi = NULL;
+	int *findex = NULL;
 
+	dReal *J = NULL;
+	dxJoint::Info2 * Jinfo = NULL;
+
+	if (m)
+	{
 	// create a constraint equation right hand side vector `c', a constraint
 	// force mixing vector `cfm', and LCP low and high bound vectors, and an
 	// 'findex' vector.
-	dReal *c = (dReal *) ALLOCA (m * sizeof (dReal));
-	dReal *cfm = (dReal *) ALLOCA (m * sizeof (dReal));
-	dReal *lo = (dReal *) ALLOCA (m * sizeof (dReal));
-	dReal *hi = (dReal *) ALLOCA (m * sizeof (dReal));
-	int *findex = (int *) ALLOCA (m * sizeof (int));
+		c = (dReal *) ALLOCA (m * sizeof (dReal));
+		cfm = (dReal *) ALLOCA (m * sizeof (dReal));
+		lo = (dReal *) ALLOCA (m * sizeof (dReal));
+		hi = (dReal *) ALLOCA (m * sizeof (dReal));
+		findex = (int *) ALLOCA (m * sizeof (int));
 	dSetZero (c, m);
 	dSetValue (cfm, m, world->global_cfm);
 	dSetValue (lo, m, -dInfinity);
@@ -729,9 +737,9 @@ dInternalStepIslandFast (dxWorld * world, dxBody * const *bodies, int nb, dxJoin
 #   ifdef TIMING
 	dTimerNow ("create J");
 #   endif
-	dReal *J = (dReal *) ALLOCA (2 * m * 8 * sizeof (dReal));
-	dSetZero (J, 2 * m * 8);
-	dxJoint::Info2 * Jinfo = (dxJoint::Info2 *) ALLOCA (nj * sizeof (dxJoint::Info2));
+		J = (dReal *) ALLOCA (2 * m * 8 * sizeof (dReal));
+		//dSetZero (J, 2 * m * 8);
+		Jinfo = (dxJoint::Info2 *) ALLOCA (nj * sizeof (dxJoint::Info2));
 	for (i = 0; i < nj; i++)
 	{
 		Jinfo[i].rowskip = 8;
@@ -747,6 +755,8 @@ dInternalStepIslandFast (dxWorld * world, dxBody * const *bodies, int nb, dxJoin
 		Jinfo[i].hi = hi + ofs[i];
 		Jinfo[i].findex = findex + ofs[i];
 		//joints[i]->vtable->getInfo2 (joints[i], Jinfo+i);
+	}
+
 	}
 
 	dReal *saveFacc = (dReal *) ALLOCA (nb * 4 * sizeof (dReal));
@@ -859,8 +869,10 @@ dInternalStepIslandFast (dxWorld * world, dxBody * const *bodies, int nb, dxJoin
 			//dInternalStepIslandFast is an exact copy of the old routine with one
 			//modification: the calculated forces are added back to the facc and tacc
 			//vectors instead of applying them to the bodies and moving them.
+			if (info[j].m > 0)
+			{
 			dInternalStepFast (world, bodyPair, GIPair, GinvIPair, joint, info[j], Jinfo[j], ministep);
-
+			}		
 		}
 		//  }
 #	ifdef TIMING
